Fixed image spacing

--- a/teacher-dashboard.css
+++ b/teacher-dashboard.css
@@ -17,18 +17,26 @@ body {
 
 /* Image properties */
 img{
-  display: block;
-  object-fit: scale-down;
+  /* display: block; */
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
 
   .header {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     background-color: #D9D9D9;
-    height: 50px;
+    height: 80px;
     width: auto;
+  }
+
+  .header > * {
+    flex-basis: 100%;
   }
 
   .item{
